@@ -1,3 +1,7 @@
+2006-05-24  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/net/net_io.c (do_ip_addr): Bail out if no networking.
+
 2006-05-23  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/flash.c (fis_update_directory): Fix problems building on systems
